# ask-cfo

./: .env.example  AGENTS.md  CLAUDE.md  README.md  README_zh.md  VERSIONS.md  pyproject.toml
backend/: __init__.py  config.py  constants.py  interfaces.py  main.py
backend/app/: main.py
backend/data/prompts/chat/: follow_up.j2  system_prompt.j2
backend/data/prompts/regulations/: qa_system_prompt.j2
backend/data/regulations/: seed.yaml
backend/repositories/regulations/: keyword_search.py  models.py  registry.py  seed_loader.py  tools.py
backend/routes/: _dsp.py  _schemas.py  chat.py  regulations.py
backend/services/chat/: orchestrator.py
backend/services/regulatory/: regulation_agent.py
backend/tests/: test_chat_orchestrator.py  test_chat_route.py  test_keyword_search.py  test_regulation_agent.py  test_regulations_route.py  test_seed_loader.py
brain/: Dockerfile  requirements.txt
docs/: NEXT_STEPS.md  PRD.md  QUICKSTART.md  SALVAGE_MAP.md  architecture.md
docs/versions/: v0.1.0-封版.md  v0.1.0.md  v0.2.0-开发中.md
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/bookkeeping/: page.tsx
frontend/src/app/month-end/: page.tsx
frontend/src/app/regulations/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/tax-filing/: page.tsx
frontend/src/components/: ChatPanel.tsx  LeftMenu.tsx
frontend/src/features/chat/: ChatStream.tsx
frontend/src/features/regulations/: AgentTrace.tsx  RegulationCard.tsx  SampleQueries.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/services/: regulationsApi.ts
frontend/src/stores/: workspaceStore.ts
frontend/src/types/: chat.ts  regulation.ts  workspace.ts
legacy/wencfo/backend/: Dockerfile  requirements.txt
legacy/wencfo/brain/app/: __init__.py  main.py
legacy/wencfo/tax_service/: Dockerfile  requirements.txt
legacy/wencfo/tax_service/app/: __init__.py  main.py
legacy/wencfo/tax_service/app/services/: browser_tax_service.py  tax_service_factory.py
tax_service/app/api/v1/: api.py
tax_service/app/core/: config.py
tax_service/app/services/: api_tax_service.py  base_tax_service.py
